# bytes-varint

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  try_get_fixed.rs
