[package]
name = "bytes-varint"
version = "0.9.0"
edition = "2021"
authors = [
    "Arno Haase <arno.haase@haase-consulting.com>",
]
description = "variable-length integer encoding for the Bytes crate"
keywords = [
    "bytes",
    "varint",
    "protobuf",
]
license = "MIT"
repository = "https://github.com/arnohaase/bytes-varint"

[dependencies]
bytes = "1"

[dev-dependencies]
rstest = "0"
