[package]
name = "bytes-varint"
version = "1.1.1"
edition = "2021"
authors = [
    "Arno Haase <arno.haase@haase-consulting.com>",
]
description = "variable-length integer encoding (protobuf-style) for the `bytes` crate"
keywords = [
    "bytes",
    "varint",
    "protobuf",
]
license = "MIT"
repository = "https://github.com/arnohaase/bytes-varint"
documentation = "https://docs.rs/bytes-varint"

[dependencies]
bytes = "1"

[dev-dependencies]
rstest = "0"
